--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
   --pastel-primary: #8b8cf8;
   --pastel-active: #f163cd;
   --pastel-muted: #94a3b8;
+  --border-color: #f1f5f9;
+  --border-light: #f8fafc;
   
   /* Variabel tambahan untuk Input & Popup */
   --card-bg: #ffffff;
