--- a/index.html
+++ b/index.html
@@ -2396,7 +2396,7 @@ async function handleOcrKtp(event) {
             
             extractKtpData(rawText);
             
-            alert("Scan Berhasil dengan Engine 3!");
+            alert("Scan Berhasil, Lakukan Verifikasi ! ");
         } else {
             alert("Pesan Server: " + result.ErrorMessage);
         }
