--- a/index.html
+++ b/index.html
@@ -691,14 +691,14 @@ body.dark span:not(.material-icons) {
         <div class="grid grid-cols-2 gap-4">
             <div>
                 <label class="form-label" style="color: var(--text-muted)">Kelamin<span class="required-icon">*</span></label>
-                <select id="f-kelamin" class="modern-input">
+                <select id="f-kelamin" class="modern-input"> <option value="" disabled selected>Pilih Kelamin</option>
                     <option value="Laki-laki">Laki-laki</option>
                     <option value="Perempuan">Perempuan</option>
                 </select>
             </div>
             <div>
                 <label class="form-label" style="color: var(--text-muted)">Agama<span class="required-icon">*</span></label>
-                <select id="f-agama" class="modern-input">
+                <select id="f-agama" class="modern-input"> <option value="" disabled selected>Pilih Agama</option>
                     <option value="Islam">Islam</option><option value="Kristen">Kristen</option><option value="Katolik">Katolik</option><option value="Buddha">Buddha</option><option value="Hindu">Hindu</option><option value="Konghucu">Konghucu</option>
                 </select>
             </div>
@@ -712,7 +712,7 @@ body.dark span:not(.material-icons) {
       <div class="grid grid-cols-2 gap-4">
     <div>
         <label class="form-label" style="color: var(--text-muted)">Status Perkawinan<span class="required-icon">*</span></label>
-        <select id="f-perkawinan" class="modern-input">
+        <select id="f-perkawinan" class="modern-input"><option value="" disabled selected>Pilih Status Perkawinan</option>
             <option value="Belum kawin">Belum kawin</option>
             <option value="Kawin">Kawin</option>
             <option value="Cerai Hidup">Cerai Hidup</option>
@@ -721,7 +721,7 @@ body.dark span:not(.material-icons) {
     </div>
     <div>
         <label class="form-label" style="color: var(--text-muted)">Status Tinggal<span class="required-icon">*</span></label>
-        <select id="f-tinggal" class="modern-input">
+        <select id="f-tinggal" class="modern-input"><option value="" disabled selected>Pilih Status Tinggal</option>
             <option value="Tetap">Tetap</option>
             <option value="Kontrak">Kontrak</option>
             <option value="Kos">Kos</option>
@@ -732,7 +732,7 @@ body.dark span:not(.material-icons) {
 
 <div>
     <label class="form-label" style="color: var(--text-muted)">Pekerjaan<span class="required-icon">*</span></label>
-    <select id="f-pekerjaan" class="modern-input">
+    <select id="f-pekerjaan" class="modern-input"> <option value="" disabled selected>Pilih Pekerjaan</option>
         <option value="Belum/Tidak Bekerja">Belum/Tidak Bekerja</option>
         <option value="Mengurus Rumah Tangga">Mengurus Rumah Tangga</option>
         <option value="Pelajar/Mahasiswa">Pelajar/Mahasiswa</option>
@@ -757,7 +757,7 @@ body.dark span:not(.material-icons) {
     <div class="grid grid-cols-3 gap-2">
         <div>
             <label class="form-label" style="color: var(--text-muted)">Blok<span class="required-icon">*</span></label>
-            <select id="f-blok" class="modern-input !pl-2" onchange="syncKtp()">
+            <select id="f-blok" class="modern-input !pl-2" onchange="syncKtp()"><option value="" disabled selected>Pilih Blok</option>
                 <option value="A">A</option><option value="B">B</option><option value="B1">B1</option>
                 <option value="C">C</option><option value="D">D</option><option value="E">E</option>
                 <option value="F">F</option><option value="G">G</option><option value="Masjid">Masjid</option>
@@ -769,7 +769,7 @@ body.dark span:not(.material-icons) {
         </div>
         <div>
             <label class="form-label" style="color: var(--text-muted)">RT<span class="required-icon">*</span></label>
-            <select id="f-rt" class="modern-input !pl-2" onchange="syncKtp()">
+            <select id="f-rt" class="modern-input !pl-2" onchange="syncKtp()"> <option value="" disabled selected>Pilih RT</option>
                 <option value="1">1</option><option value="2">2</option>
                 <option value="3">3</option><option value="4">4</option>
             </select>
@@ -791,7 +791,7 @@ body.dark span:not(.material-icons) {
         <div class="grid grid-cols-2 gap-4">
             <div>
                 <label class="form-label" style="color: var(--text-muted)">Status Keluarga<span class="required-icon">*</span></label>
-                <select id="f-status-kel" class="modern-input">
+                <select id="f-status-kel" class="modern-input"><option value="" disabled selected>Pilih Status Keluarga</option>
                     <option value="Kepala Keluarga">Kepala Keluarga</option><option value="Istri">Istri</option><option value="Anak">Anak</option><option value="Orang Tua">Orang Tua</option><option value="Lainnya">Lainnya</option>
                 </select>
             </div>
