--- a/index.html
+++ b/index.html
@@ -2366,7 +2366,7 @@ async function handleOcrKtp(event) {
     const btnLabel = event.target.nextElementSibling;
     const originalText = btnLabel.innerText;
     
-    btnLabel.innerText = "MENGHUBUNGI CLOUD (E3)...";
+    btnLabel.innerText = "MOHON TUNGGU...";
     btnLabel.style.pointerEvents = "none";
 
     const formData = new FormData();
