--- a/index.html
+++ b/index.html
@@ -2365,7 +2365,7 @@ async function handleOcrKtp(event) {
 
     const btnLabel = event.target.nextElementSibling;
     const originalText = btnLabel.innerText;
-    btnLabel.innerText = "MENGOMPRES & MENGIRIM...";
+    btnLabel.innerText = "MOHON TUNGGU...";
     btnLabel.style.pointerEvents = "none";
 
     try {
@@ -2388,6 +2388,7 @@ async function handleOcrKtp(event) {
 
         if (result.OCRExitCode === 1) {
             const rawText = result.ParsedResults[0].ParsedText;
+            console.log("Hasil OCR Cloud Engine 3:", rawText);
             extractKtpData(rawText);
             alert("Scan Berhasil, Lakukan Verifikasi ! ");
         } else {
